--- a/ch02/nginx-echo/nginx/etc/nginx/conf.d/echo.conf
+++ b/ch02/nginx-echo/nginx/etc/nginx/conf.d/echo.conf
@@ -3,7 +3,7 @@ server {
     server_name echo.gihyo.local;
 
     location / {
-        proxy_pass http://echo;
+        proxy_pass http://echo-group;
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-For $remote_addr;
         access_log  /dev/stdout main;
